// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`targets > normal 1`] = `
[
  ".changeset",
  ".vscode",
  ".editorconfig",
  ".gitattributes",
  ".gitignore",
  ".npmrc",
  "biome.json",
  "package.json",
  "pnpm-workspace.yaml",
  "tsconfig.json",
  "turbo.json",
  "vitest.config.ts",
  "Dockerfile",
  ".dockerignore",
  ".github",
  "LICENSE",
  "renovate.json",
  "SECURITY.md",
  "CODE_OF_CONDUCT.md",
  "CONTRIBUTING.md",
]
`;

exports[`targets > raw 1`] = `
[
  ".changeset",
  ".vscode",
  ".editorconfig",
  ".gitattributes",
  ".gitignore",
  ".npmrc",
  "biome.json",
  "package.json",
  "pnpm-workspace.yaml",
  "tsconfig.json",
  "turbo.json",
  "vitest.config.ts",
  "Dockerfile",
  ".dockerignore",
]
`;
